--- a/index.html
+++ b/index.html
@@ -68,6 +68,18 @@
 							<section class="posts">
 								<article>
 									<header>
+										<span class="date">Lead Game Developer</span>
+										<h2><a href="https://play.google.com/store/apps/details?id=com.yorfstudio.zdefense&hl=en_US&gl=US" target="_blank" >Zombie Defense</a></h2>
+									</header>
+									<a href="https://play.google.com/store/apps/details?id=com.yorfstudio.zdefense&hl=en_US&gl=US" target="_blank"  class="image fit"><img src="Images/ZDefense.png" alt="" /></a>
+									<p>Spearheaded the development for Homa Games highly popular Zombie Defense survival game with over
+										10 million downloads on the play store</p>
+									<ul class="actions special">
+										<li><a href="https://play.google.com/store/apps/details?id=com.yorfstudio.zdefense&hl=en_US&gl=US" target="_blank" class = "button" >View Game</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<span class="date">Lead Game Engineer</span>
 										<h2><a href="Finnegan.html">Finnegan<br />
 										The Dragon</a></h2>
