--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 										<span class="date">Lead Game Developer</span>
 										<h2><a href="https://play.google.com/store/apps/details?id=com.yorfstudio.zdefense&hl=en_US&gl=US" target="_blank" >Zombie Defense</a></h2>
 									</header>
-									<a href="https://play.google.com/store/apps/details?id=com.yorfstudio.zdefense&hl=en_US&gl=US" target="_blank"  class="image fit"><img src="Images/ZDefense.png" alt="" /></a>
-									<p>Spearheaded the development for Homa Games highly popular Zombie Defense survival game with over
-										10 million downloads on the play store</p>
+									<a href="https://play.google.com/store/apps/details?id=com.yorfstudio.zdefense&hl=en_US&gl=US" target="_blank"  class="image fit"><img src="Images/ZDE1.jpg" alt="" /></a>
+									<p>Spearheaded the development for Homa Games highly popular hybrid casual Zombie Defense survival game with over
+										100 million downloads across different platforms</p>
 									<ul class="actions special">
 										<li><a href="https://play.google.com/store/apps/details?id=com.yorfstudio.zdefense&hl=en_US&gl=US" target="_blank" class = "button" >View Game</a></li>
 									</ul>
@@ -88,6 +88,17 @@
 									<p>A purpose built sing along adventure game for pre-schoolers to improve their speaking abilities and diagnose/prevent the possibility of a future speaking disorder.</p>
 									<ul class="actions special">
 										<li><a href="Finnegan.html" class="button">Full Story</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<span class="date">Personal Project</span>
+										<h2><a href="OpenGL.html">OpenGL Simulations</h2>
+									</header>
+									<a href="OpenGL.html" class="image fit"><img src="images/OpenGL.png" alt="" /></a>
+									<p>A variety of OpenGL projects created for my computer animations course. These include physics simulations, flocking simulations, interpolations, game engine classes and more. All made from scratch using C++.</p>
+									<ul class="actions special">
+										<li><a href="OpenGL.html" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
