--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 										<span class="date">Lead Game Developer</span>
 										<h2><a href="https://play.google.com/store/apps/details?id=com.yorfstudio.zdefense&hl=en_US&gl=US" target="_blank" >Zombie Defense</a></h2>
 									</header>
-									<a href="https://play.google.com/store/apps/details?id=com.yorfstudio.zdefense&hl=en_US&gl=US" target="_blank"  class="image fit"><img src="Images/ZDE1.jpg" alt="" /></a>
+									<a href="https://play.google.com/store/apps/details?id=com.yorfstudio.zdefense&hl=en_US&gl=US" target="_blank"  class="image fit"><img src="images/ZDE1.jpg" alt="" /></a>
 									<p>Spearheaded the development for Homa Games highly popular hybrid casual Zombie Defense survival game with over
 										100 million downloads across different platforms</p>
 									<ul class="actions special">
